[package]
name = "audio_overlay"
version = "0.1.5"
edition = "2021"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "Overlay one audio sample array onto another"
keywords = ["wav", "wave", "audio"]
categories = ["multimedia::encoding", "multimedia::audio"]
homepage = "https://github.com/subalterngames/audio_overlay"
repository = "https://github.com/subalterngames/audio_overlay"
license = "MIT"
exclude = ["examples/*"]

[dependencies]
